--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "autoprefix": "^1.0.1",
     "autoprefixer": "^8.4.1",
     "browser-sync": "^2.24.4",
+    "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-postcss": "^7.0.1",
+    "gulp-rename": "^1.2.3",
+    "gulp-svg-sprite": "^1.4.0",
     "gulp-watch": "^5.0.0",
     "postcss-import": "^11.1.0",
     "postcss-mixins": "^6.2.0",
