--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "travel-site",
   "version": "1.0.0",
   "dependencies": {
-    "jquery": "^3.3.1",
+    "jquery": "^2.2.4",
     "normalize.css": "^8.0.0"
   },
   "devDependencies": {
     "autoprefix": "^1.0.1",
     "autoprefixer": "^8.4.1",
+    "babel-core": "^6.10.4",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
     "browser-sync": "^2.24.4",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
@@ -16,9 +19,16 @@
     "gulp-rename": "^1.2.3",
     "gulp-svg-sprite": "^1.4.0",
     "gulp-watch": "^5.0.0",
+    "postcss-hexrgba": "^1.0.1",
     "postcss-import": "^11.1.0",
     "postcss-mixins": "^6.2.0",
     "postcss-nested": "^3.0.0",
-    "postcss-simple-vars": "^4.1.0"
+    "postcss-simple-vars": "^4.1.0",
+    "webpack": "^1.15.0",
+    "webpack-cli": "^2.1.4",
+    "webpack-command": "^0.2.0"
+  },
+  "scripts": {
+    "start": "webpack --config webpack.config.js"
   }
 }
