--- a/package.json
+++ b/package.json
@@ -17,9 +17,14 @@
     "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
+    "gulp-cssnano": "^2.1.3",
+    "gulp-imagemin": "^4.1.0",
     "gulp-postcss": "^7.0.1",
     "gulp-rename": "^1.2.3",
+    "gulp-rev": "^8.1.1",
     "gulp-svg-sprite": "^1.4.0",
+    "gulp-uglifyes": "^0.1.3",
+    "gulp-usemin": "^0.3.29",
     "gulp-watch": "^5.0.0",
     "postcss-hexrgba": "^1.0.1",
     "postcss-import": "^11.1.0",
